--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,64 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+@import url("https://fonts.googleapis.com/css2?family=Kanit:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
+
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  font-family: "Kanit", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
+}
+
+.title {
+  -webkit-text-stroke: 1px black;
+  letter-spacing: 0.1em;
+  font-family: "Kanit", sans-serif;
+  font-size: 44px;
+  font-weight: 900;
+  text-shadow: 0px 2px #ef9a38, 0px 4px #e0683e, 0px 6px #dc4843,
+    0px 8px #af2038, 0px 10px #15c3ba;
+}
+
+.btn {
+  border: 2px solid black;
+  padding: 0.25rem 0.5rem 0.25rem 0.5rem;
+  box-shadow: 2px 2px black;
+  margin: 0.5rem;
+  border-radius: 4px;
+}
+.btn:active,
+.btn:disabled {
+  box-shadow: none;
+  transform: translate(2px, 2px);
+}
+
+.input {
+  flex-grow: 1;
+  border-width: 2px;
+  border-color: rgb(0 0 0 / 1);
+  border-radius: 4px;
+  padding-top: 0.25rem;
+  padding-bottom: 0.25rem;
+  box-shadow: 2px 3px rgba(0, 0, 0, 1);
+  margin: 0.5rem;
+}
+.input:focus {
+  border: 2px solid #4cb8b4;
+  outline: 2px solid transparent;
+  outline-offset: 2px;
+}
+.loader {
+  animation: spin 2s infinite linear;
+}
+@keyframes spin {
+  to {
+    transform: rotate(1turn);
+  }
 }
