--- a/src/index.css
+++ b/src/index.css
@@ -36,3 +36,31 @@ input[type="number"] {
   text-shadow: 0px 2px #ef9a38, 0px 4px #e0683e, 0px 6px #dc4843,
     0px 8px #af2038, 0px 10px #15c3ba;
 }
+
+/* .menu-item:first-child {
+  border-top-left-radius: 50px;
+  border-bottom-left-radius: 50px;
+  border-top-right-radius: 8px;
+  border-bottom-right-radius: 8px;
+}
+
+.menu-item:last-child {
+  border-top-left-radius: 8px;
+  border-bottom-left-radius: 8px;
+  border-top-right-radius: 50px;
+  border-bottom-right-radius: 50px;
+}
+
+.menu-item {
+  border-top-left-radius: 4px;
+  border-bottom-left-radius: 4px;
+  border-top-right-radius: 4px;
+  border-bottom-right-radius: 4px;
+} */
+
+.menu-item {
+  border-top-left-radius: 9999px;
+  border-bottom-left-radius: 9999px;
+  border-top-right-radius: 9999px;
+  border-bottom-right-radius: 9999px;
+}
